# comicsaver

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: publish.yml
src/comicsaver/: cli.py
src/comicsaver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
