[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comicsaver"
version = "0.1.0"
description = "A command-line tool to download comics from readcomiconline.li"
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "selenium",
    "webdriver-manager",
    "requests",
    "beautifulsoup4",
    "tqdm",
    "Pillow",
]

[project.scripts]
comicsaver = "comicsaver.cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/comicsaver"
"Bug Tracker" = "https://github.com/yourusername/comicsaver/issues"
