[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comicsaver"`
version = "0.2.1"
description = "A command-line tool to download comics from readcomiconline.li"
readme = "README.md"
authors = [
  { name = "Akshay C V", email = "cvakshay764@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "selenium",
    "webdriver-manager",
    "requests",
    "beautifulsoup4",
    "tqdm",
    "Pillow",
]

[project.scripts]
comicsaver = "comicsaver.cli:main"

[project.urls]
"Homepage" = "https://github.com/akaazazel/comicsaver"
"Bug Tracker" = "https://github.com/akaazazel/comicsaver/issues"
